ingress/echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echoapp
  template:
    metadata:
      labels:
        app: echoapp
    spec:
      containers:
      - name: echoapp
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts: 
         - name: defaultpage
           mountPath: /usr/share/nginx/html
      volumes:
       - name: defaultpage
         configMap:
          name: echoconfigmap
