ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capshop
  labels:
    name: capshop
spec:
  rules:
    - host: capshop.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quote
                port: 
                  number: 80
